metadata/force-app/main/default/objects/CustomName_IhVaM__c/CustomName_IhVaM__c.object-meta.xml
<CustomObject>
    <description>Description_WaZVw</description>
    <label>CustomLabel_yAwBh</label>
    <nameField>
        <label>CustomLabel_yAwBh</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_yAwBhs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>