metadata/force-app/main/default/objects/CustomName_IhVaM__c/fields/CustomField_EiTdD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_EiTdD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGjpJz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>